Imported svg checkmark button for checkbox

--- a/src/components/buttons/checkbox/checkbox.scss
+++ b/src/components/buttons/checkbox/checkbox.scss
@@ -32,9 +32,9 @@
 
       &:after {
         position: absolute;
-        width: 12px;
+        width: 10px;
         height: 12px;
-        background: $primary-gradient;
+        background-image: url("/src/assets/images/vector/checkmark_primary-gradient.svg");
         content: '';
       }
     }
