Fixed titlebar state displaying bug

--- a/src/components/title-bar/title-bar.pug
+++ b/src/components/title-bar/title-bar.pug
@@ -1,6 +1,6 @@
 mixin titleBar( text, state, id )
   - const itemId = id ? id : ''
-  - const stateText = id ? state : ''
+  - const stateText = id ? '' : state
 
   .title-bar
     span.title-bar__title #{text}
