--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -205,13 +205,13 @@ body.ui-kit__body
               brief: "Окно в каждой из спален"
             }
           ])
-      .column_center
+      .form-elements-column.column_center
         .block__comment-bar
           +commentBar([
             {
               name: "Мурад Сарафанов",
               daysago: "5 дней назад",
-              photourl: "src/",
+              avatarname: "murad",
               text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.",
               likebtn: {
                 groupname: "uik-fe-comment",
