--- a/src/components/comment-bar/comment-bar.scss
+++ b/src/components/comment-bar/comment-bar.scss
@@ -6,7 +6,7 @@
   grid-gap: 10px;
   font-size: 14px;
 
-  &__photo {
+  &__avatar {
 
   }
 
@@ -31,6 +31,7 @@
   }
 
   &__text {
+    width: 653px;
     line-height: 24px;
   }
 }
