--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -4,7 +4,7 @@
   &_frame {
     height: 20px;
     width: 40px;
-    margin: 0 10px 0 0;
+    margin: 0;
     box-sizing: border-box;
     border-radius: 10px;
     border-style: solid;
