Fixed advantage-bar mixin display method and input property name

--- a/src/components/advantage-bar/advantage-bar.pug
+++ b/src/components/advantage-bar/advantage-bar.pug
@@ -3,7 +3,7 @@ mixin advantageBars( items=[] )
     .advantages-block
       .advantages-block__text-bar
         .advantages-block__icon
-          span.material-icons-outlined.gradient-fill #{item.icon}
+          span.material-icons-outlined.gradient-fill #{item.iconname}
         .advantages-block__text
           span.advantages-block__text__title #{item.title}
           span.advantages-block__text__brief #{item.brief}
