--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -195,12 +195,12 @@ body.ui-kit__body
         .block__advantage-bars
           +advantageBars([
             {
-              icon: "insert_emoticon",
+              iconname: "insert_emoticon",
               title: "Комфорт",
               brief: "Шумопоглощающие стены"
             },
             {
-              icon: "location_city",
+              iconname: "location_city",
               title: "Удобство",
               brief: "Окно в каждой из спален"
             }
