Fixed subscription input keywidth absence

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -89,6 +89,7 @@ body.ui-kit__body
               title: "subscription text field",
               placeholder: "Email",
               type: "email",
+              keywidth: 75,
               subscription: true
             }
           ])
