--- a/src/components/buttons/mean-oval/mean-oval.scss
+++ b/src/components/buttons/mean-oval/mean-oval.scss
@@ -1,5 +1,17 @@
 @import "@variables";
 
+.mean-oval-buttons {
+  display: grid;
+  grid-gap: 30px;
+
+  &__array {
+    display: inherit;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 30px 20px;
+    justify-content: start;
+  }
+}
+
 .mean-oval-button {
   position: relative;
   display: flex;
@@ -12,10 +24,6 @@
 
   &:hover > .mean-oval-button__background {
     opacity: .5;
-  }
-
-  & > * {
-    cursor: pointer;
   }
 
   &__background {
@@ -60,6 +68,10 @@
         opacity: .5;
       }
     }
+
+    & > * {
+      cursor: pointer;
+    }
   }
 
   &__icon {
@@ -69,16 +81,6 @@
     z-index: 13;
     margin-right: 10px;
   }
-}
-
-.ripple {
-  animation: pop 180ms ease forwards;
-}
-
-@keyframes pop {
-  0%   { transform: scale(1); }
-  66%  { transform: scale(0.94); }
-  100% { transform: scale(1); }
 }
 
 .button-style {
@@ -108,14 +110,12 @@
   }
 }
 
-.mean-oval-buttons {
-  display: grid;
-  grid-gap: 30px;
+.ripple {
+  animation: rippling 180ms ease forwards;
+}
 
-  &__array {
-    display: inherit;
-    grid-template-columns: repeat(2, auto);
-    grid-gap: 30px 20px;
-    justify-content: start;
-  }
+@keyframes rippling {
+  0%   { transform: scale(1); }
+  66%  { transform: scale(0.94); }
+  100% { transform: scale(1); }
 }
