Fixed bug with padding inside grid-displayed structure, now central column have fixed width

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -93,7 +93,7 @@ body.ui-kit__body
               subscription: true
             }
           ])
-      .form-elements-column.column_center
+      .form-elements-column
         .block__checkbox-buttons
           +titleBar("checkbox buttons")
           .checkbox-buttons__array.additional-padding
@@ -184,11 +184,11 @@ body.ui-kit__body
               }
             }
           ])
-      .form-elements-column.column_center
+      .form-elements-column
       .form-elements-column
     .form-elements__wrap_lower-middle.indentation_wrap
       .form-elements-column
-      .form-elements-column.column_center
+      .form-elements-column
       .form-elements-column
         .block__bullet-list
           +titleBar("bullet list")
@@ -213,7 +213,7 @@ body.ui-kit__body
               brief: "Окно в каждой из спален"
             }
           ])
-      .form-elements-column.column_center
+      .form-elements-column
         .block__comment-bar
           +commentBar([
             {
