--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,2 +1,7 @@
-mixin rangeSlider()
-  #range-slider
+mixin rangeSlider( item )
+  - const stateId = item.id + '_state'
+
+  .range-slider__wrap( class=`elem__width_${ item.keywidth }`)
+    +titleBar( item.title, true, stateId )
+    .range-slider__wrap_container.additional-padding 
+      .range-slider__elem( id=item.id )
