--- a/src/components/buttons/checkbox/checkbox.scss
+++ b/src/components/buttons/checkbox/checkbox.scss
@@ -11,6 +11,11 @@
     cursor: pointer;
   }
 
+  & label {
+    font-size: 14px;
+    color: $valhalla;
+  }
+
   &__elem {
     position: relative;
     display: flex;
@@ -21,13 +26,11 @@
     border-width: 1px;
     border-style: solid;
     border-radius: 4px;
-    border-color: $valhalla;
-    opacity: .25;
+    border-color: rgba($valhalla, .25);
 
     &:checked {
       align-items: center;
       justify-content: center;
-      opacity: 1;
       border-color: $perfume;
 
       &:after {
@@ -40,11 +43,25 @@
     }
   }
 
-  &__label {
-    font-size: 14px;
-    color: $valhalla;
-    opacity: .5;
+  &__common-label {
     width: 195px;
+    opacity: .5;
+  }
+
+  &__rich-label {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+
+    &_title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      opacity: .75;
+    }
+
+    &_info {
+      opacity: .5;
+    }
   }
 }
 
