--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -229,7 +229,7 @@ body.ui-kit__body
                 pressed: false,
                 label: {
                   title: "Широкий коридор",
-                  info: "Ширина коридоров в номере не менее 91 см."
+                  info: "Ширина коридоров в номере \nне менее 91 см."
                 }
               },
               {
