--- a/src/components/buttons/checkbox/checkbox.scss
+++ b/src/components/buttons/checkbox/checkbox.scss
@@ -12,7 +12,6 @@
   }
 
   & label {
-    font-size: 14px;
     color: $valhalla;
   }
 
@@ -45,22 +44,26 @@
 
   &__common-label {
     width: 195px;
+    font-size: 14px;
     opacity: .5;
   }
 
   &__rich-label {
     display: flex;
     flex-direction: column;
-    font-size: 14px;
-
+    width: 230px;
+    
     &_title {
+      font-size: 14px;
       font-weight: bold;
       margin-bottom: 5px;
       opacity: .75;
     }
 
     &_info {
+      font-size: 12px;
       opacity: .5;
+      white-space: pre-wrap;
     }
   }
 }
