--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -224,7 +224,7 @@ body.ui-kit__body
           .checkbox-buttons__array.additional-padding
             +checkboxButtons([
               {
-                rich: true,
+                richmode: true,
                 groupname: "uik-fe_rich-cbb",
                 pressed: false,
                 label: {
@@ -233,7 +233,7 @@ body.ui-kit__body
                 }
               },
               {
-                rich: true,
+                richmode: true,
                 groupname: "uik-fe_rich-cbb",
                 pressed: false,
                 label: {
