Added new component - checkbox-list mixin and material-icon-cell mixin

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -7,6 +7,7 @@ include ../components/range-slider/range-slider.pug
 include ../components/pagination/pagination.pug
 include ../components/bullet-list/bullet-list.pug
 include ../components/comment-bar/comment-bar.pug
+include ../components/checkbox-list/checkbox-list.pug
 
 include ../components/buttons/toggle/toggle.pug
 include ../components/buttons/like/like.pug
