--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -1,6 +1,6 @@
-include ../components/title-bar/title-bar.pug
-include ../components/buttons/checkbox/checkbox.pug
-include ../components/material-icon-cell/material-icon-cell.pug
+include ../title-bar/title-bar.pug
+include ../buttons/checkbox/checkbox.pug
+include ../material-icon-cell/material-icon-cell.pug
 
 mixin checkboxButtonsList( items=[] )
   .checkbox-list
