--- a/src/components/material-icon-cell/material-icon-cell.pug
+++ b/src/components/material-icon-cell/material-icon-cell.pug
@@ -1,2 +1,4 @@
-mixin materialIcon(code)
-  span.material-icons-outlined #{ code }
+mixin materialIcon( code, id )
+  - const itemId = id ? id : ''
+
+  span.material-icons( for=itemId ) #{ code }
