--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -140,20 +140,24 @@ body.ui-kit__body
           .mean-oval-buttons.additional-padding
             .mean-oval-buttons__array
               +meanOvalButtons([
-                { type: "contained", id:"uik-fe-mob_1" },
-                { type: "contained", id:"uik-fe-mob_2", onhover: true },
-                { type: "outlined", id:"uik-fe-mob_3" },
-                { type: "outlined", id:"uik-fe-mob_4", onhover: true }
+                { groupname: "uik-fe__mob-mid", type: "contained" },
+                { groupname: "uik-fe__mob-mid", type: "contained", disabled: true },
+                { groupname: "uik-fe__mob-mid", type: "outlined" },
+                { groupname: "uik-fe__mob-mid", type: "outlined", disabled: true }
               ])
             .mean-oval-buttons__array
               +meanOvalButtons([
-                { type: "text", id:"uik-fe-mob_5" },
-                { type: "text", id:"uik-fe-mob_6", onhover: true },
+                { groupname: "uik-fe__mob-small", type: "text" },
+                { groupname: "uik-fe__mob-small", type: "text", disabled: true },
               ])
             .mean-oval-buttons__unit
-              +meanOvalButtons([
-                { type: "contained", id:"uik-fe-mob_7", text: "перейти к оплате", iconname: "arrow_forward", widthkey: "100" },
-              ])
+              +meanOvalButtons({
+                groupname: "uik-fe__mob-huge",
+                iconname: "arrow_forward",
+                widthkey: "100",
+                type: "contained",
+                text: "перейти к оплате",
+              })
         .block__pagination.indentation_double 
           +titleBar("pagination")
           .pagination__elem.additional-padding
