--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -53,7 +53,7 @@ body.ui-kit__body
             {
               title: "date dropdown",
               placeholder: "ДД.ММ.ГГГГ",
-              keywidth: 50,
+              widthbypercent: 50,
               dropdown: {
                 options: [
                   ""
@@ -63,7 +63,7 @@ body.ui-kit__body
             {
               title: "date dropdown",
               placeholder: "19.08.2019",
-              keywidth: 50,
+              widthbypercent: 50,
               dropdown: {
                 options: [
                   ""
@@ -76,7 +76,7 @@ body.ui-kit__body
             {
               title: "filter date dropdown",
               placeholder: "19 авг - 23 авг",
-              keywidth: 75,
+              widthbypercent: 75,
               dropdown: {
                 options: [
                   ""
@@ -90,7 +90,7 @@ body.ui-kit__body
               title: "subscription text field",
               placeholder: "Email",
               type: "email",
-              keywidth: 75,
+              widthbypercent: 75,
               subscription: true
             }
           ])
@@ -133,7 +133,7 @@ body.ui-kit__body
           +rangeSlider({
             title: "range slider",
             id: "uik-fe-range-slider",
-            keywidth: 75,
+            widthbypercent: 75,
           })
         .block__mean-oval-buttons.indentation_double
           +titleBar("buttons")
@@ -154,7 +154,7 @@ body.ui-kit__body
               +meanOvalButtons({
                 groupname: "uik-fe__mob-huge",
                 iconname: "arrow_forward",
-                widthkey: "100",
+                widthbypercent: "100",
                 type: "contained",
                 text: "перейти к оплате",
               })
