--- a/src/components/buttons/mean-oval/mean-oval.pug
+++ b/src/components/buttons/mean-oval/mean-oval.pug
@@ -4,8 +4,8 @@ mixin meanOvalButtons( items=[] )
   each item in items
     - const buttonId = item.groupname + '_' + ++buttonCount
     - const buttonText = item.text ? item.text : 'click me'
-    - const widthKey = item.widthkey ? item.widthkey : '30'
-    - const widthClass = item.type === 'text' ? '' : `elem__width_${widthKey}`
+    - const widthByPercent = item.widthbypercent ? item.widthbypercent : '30'
+    - const widthClass = item.type === 'text' ? '' : `elem__width_${widthByPercent}`
     - const frozenClass = item.disabled ? 'frozen' : ''
 
     case item.type 
